log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: logger-claim
      containers:
        - name: log-server
          image: palolaur/log-server:1.14
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
        - name: string-generator
          image: palolaur/string-generator:1.14
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
